--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,16 @@
+buildscript {
+	dependencies {
+		classpath 'com.google.cloud.tools:appengine-gradle-plugin:1.+'
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
-	id 'com.google.cloud.tools.appengine'
 }
+
+apply plugin: 'com.google.cloud.tools.appengine'
 
 group = 'in.co.najah'
 version = '0.0.1-SNAPSHOT'
@@ -26,13 +33,14 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile("org.springframework.boot:spring-boot-starter-web")
 	compileOnly 'org.projectlombok:lombok'
 	compile "io.reactivex:rxjava:1.3.8"
 	compile "io.reactivex:rxjava-reactive-streams:1.2.1"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
-	compile 'com.google.cloud.sql:postgres-socket-factory:1.0.15'
+// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-gcp-starter-sql-postgresql
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter-sql-postgresql', version: '1.2.2.RELEASE'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
@@ -51,3 +59,5 @@ appengine {
 		promote = true
 	}
 }
+
+appengine.tools.cloudSdkHome="C:\\Active Code\\najahhr\\google-cloud-sdk"
