--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,12 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
+	compile 'org.springframework.boot:spring-boot-starter-mail:2.2.6.RELEASE'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile("org.springframework.boot:spring-boot-starter-security")
+
 }
 
 test {
