--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
 
 spring:
     datasource:
-#        driver-class-name: org.postgresql.Driver
+        driver-class-name: org.postgresql.Driver
         hikari:
             auto-commit: false
             connection-init-sql: SELECT 1
@@ -16,10 +16,10 @@ spring:
             poolName: najahr-pool
         password: admin
         type: com.zaxxer.hikari.HikariDataSource
-#        url: jdbc:postgresql://localhost:5432/najahr
-        username: postgres
-    password: admin
-    username: postgres
+        url: ${SPRING_DATASOURCE_URL}
+        username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    username: ${SPRING_DATASOURCE_USERNAME}
     jmx:
         default-domain: najahr-app
     jpa:
@@ -32,17 +32,12 @@ spring:
                 use_sql_comments: true
         show-sql: true
         database: POSTGRESQL
-    cloud:
-        gcp:
-            sql:
-                enabled: true
-                database-name: najahr
-                instance-connection-name: najahrbackend:us-central1:najahr
+
     mail:
         host: smtp.gmail.com
         port: 587
-        username: noreplynajahhr@gmail.com
-        password: HarsH@1331
+        username: ${MAIL_USER}
+        password: ${MAIL_PASS}
         protocol: smtp
         tls: true
         properties:
@@ -51,8 +46,7 @@ spring:
                     auth: true
                     starttls.enable: true
                     ssl.trust: smtp.gmail.com
-    #        credentials:
-#            locations: classpath://najahrbackend-3bd3911302b9.json
+
 
 server:
     servlet:
